Fixed horizontal scroll bug

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -5,7 +5,7 @@ $footerHeight: 1.5rem;
 #pageContainer {
   position: relative;
   min-height: 100vh;
-  width: 100vw;
+  // width: 100vw;
   #contentContainer {
     padding-bottom: $footerHeight;
 
