--- a/frontend/src/components/about.scss
+++ b/frontend/src/components/about.scss
@@ -6,13 +6,11 @@
   justify-content: center;
   align-items: center;
   min-height: $section-height;
-  // width: 100%;
-  margin: 0 auto;
   background: $primary-light;
   color: $primary-dark;
 
   .information {
-    // width: $section-width;
+    width: $section-width;
     display: flex;
     flex-direction: row-reverse;
     align-items: center;
